Make ucpp compilable with Smaller C
In particular:
- break the code down into more translation units to reduce
  pressure on Smaller C's tables keeping track of declarations
  (arith.c used to be #include'd, it's not anymore)
- break some of long expressions down into smaller expressions
  or even separate statements and turn a few function-like
  macros into simple helper functions
- redefine for Smaller C the following macros in config.h
  (to be revisited):
  NATIVE_SIGNED, NATIVE_UNSIGNED, NATIVE_UNSIGNED_BITS,
  NATIVE_SIGNED_MIN, NATIVE_SIGNED_MAX
- clean up most of the warnings showing up with gcc (mostly
  about potentially uninitialized or unused variables)
- adjust Makefile (not tested, not used with Smaller C anyway)
- add a workaround (@-files) for short command lines in DOS

To compile with Smaller C do:
smlrcc -ppg -DSTAND_ALONE -DUCPP_CONFIG -o ucpp.exe
  mem.c nhash.c cpp.c lexer.c assert.c macro.c eval.c arith.c

--- a/v0100/ucpp/Makefile
+++ b/v0100/ucpp/Makefile
@@ -81,13 +81,13 @@ LIBS =
 STAND_ALONE = -DSTAND_ALONE
 
 ifdef STAND_ALONE
-	CSRC = mem.c nhash.c cpp.c lexer.c assert.c macro.c eval.c
+	CSRC = mem.c nhash.c cpp.c lexer.c assert.c macro.c eval.c arith.c
 	FINAL_STEP = $(CC) $(LDFLAGS) -DUCPP_CONFIG $(STAND_ALONE) -o ucpp $(CSRC) $(LIBS)
 endif
 
 # ----- nothing should be changed below this line -----
 
-COBJ = mem.o nhash.o cpp.o lexer.o assert.o macro.o eval.o
+COBJ = mem.o nhash.o cpp.o lexer.o assert.o macro.o eval.o arith.o
 CFLAGS = $(FLAGS)
 
 all: ucpp
@@ -103,8 +103,10 @@ assert.o: tune.h ucppi.h cpp.h nhash.h mem.h
 	@$(CC) $(CFLAGS) -c assert.c
 cpp.o: tune.h ucppi.h cpp.h nhash.h mem.h
 	@$(CC) $(CFLAGS) -c cpp.c
-eval.o: tune.h ucppi.h cpp.h nhash.h mem.h arith.c arith.h
+eval.o: tune.h ucppi.h cpp.h nhash.h mem.h arith.h
 	@$(CC) $(CFLAGS) -c eval.c
+arith.o: tune.h arith.h
+	@$(CC) $(CFLAGS) -c arith.c
 lexer.o: tune.h ucppi.h cpp.h nhash.h mem.h
 	@$(CC) $(CFLAGS) -c lexer.c
 macro.o: tune.h ucppi.h cpp.h nhash.h mem.h
